--- a/registration.html
+++ b/registration.html
@@ -20,6 +20,7 @@
       </div>
     </form>
   </main>
+  <script src="users.js"></script>
   <script src="registration.js"></script>
 </body>
 </html>
