--- a/profile.html
+++ b/profile.html
@@ -10,8 +10,12 @@
 <body>
   <main>
     <h1>profile</h1>
+    <h2>
+      User: <output id="user"></output>
+    </h2>
     <button>log out</button>
   </main>
+  <script src="users.js"></script>
   <script src="profile.js"></script>
 </body>
 </html>
